COC chart cleanup
